Fix footer overlap issue.

--- a/public/less/layout.less
+++ b/public/less/layout.less
@@ -61,7 +61,7 @@ header.navbar {
 
 #page-container {
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 80px;
 }
 
 footer.navbar {
